<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.algha.boshuk.widget.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="right|center"
            android:text="@string/sent_verify_code"
            android:textSize="12sp" />

        <com.algha.boshuk.widget.MyTextView
            android:id="@+id/sent_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="right|center"
            android:textColor="@color/boshuk_red"
            android:textSize="12sp" />

        <com.algha.boshuk.widget.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="right|center"
            android:text="@string/verify_code_password"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/boshuk_gray" />

        <com.algha.boshuk.widget.MyEditText
            android:id="@+id/verify_code"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/white_border"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/boshuk_gray" />

        <com.algha.boshuk.widget.MyEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/white_border"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/boshuk_gray" />

        <com.algha.boshuk.widget.MyEditText
            android:id="@+id/password_again"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/white_border"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/boshuk_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <com.algha.boshuk.widget.MyTextView
                android:id="@+id/retry"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.6"
                android:background="@drawable/red_button"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/retry"
                android:textColor="#ffffff" />

            <com.algha.boshuk.widget.MyTextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.4"
                android:background="@drawable/gray_button"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="#ffffff" />
        </LinearLayout>

        <com.algha.boshuk.widget.MyTextView
            android:id="@+id/tamam"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/red_button"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tamam"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>